@@ -1,6 +1,6 @@
 from re import I
 from src.module.context import Profile as P
-from src.util.tools import IO
+from src.util.tools import IO, Logger, Funcs
 
 
 class Test:
@@ -13,8 +13,8 @@ class Test:
         input()
 
     @staticmethod
-    def build_graph_test_auto(a=2, n=5, s=1, e=1, m=3, seed_range=[0, 20]):
-    # def build_graph_test_auto(a=5, n=50, s=5, e=7, m=30, seed_range=[0, 300]):
+    # def build_graph_test_auto(a=2, n=5, s=1, e=1, m=3, seed_range=[0, 20]):
+    def build_graph_test_auto(a=5, n=50, s=5, e=7, m=30, seed_range=[0, 300]):
         """
         a: num actions
         n: total sates
@@ -95,84 +95,94 @@ class Test:
         IO.renew_dir(P.result_dir)
         a = Graph(0, True)
 
-        traj1, traj1_tr = [
-            ["a0", 1, "a1", 0],
-            ["a1", 1, "a2", 0],
-            ["a2", 1, "a3", 0],
-            ["a3", 1, "a4", 4],
-            ["a4", 1, "a5", 0],
-            ["a5", 1, "a6", 5],
-        ], 9
-        traj2, traj2_tr = [
-            ["b0", 2, "b1", 0],
-            ["b1", 2, "a2", 0],
-            ["a2", 2, "b3", 0],
-            ["b3", 2, "b4", 2],
-            ["b4", 2, "b5", 0],
-            ["b5", 2, "b6", 0],
-        ], 2
-        traj3, traj3_tr = [
-            ["c0", 3, "c1", 0],
-            ["c1", 3, "b5", 0],
-            ["b5", 3, "c3", 0],
-            ["c3", 3, "c4", 0],
-            ["c4", 3, "a4", 0],
-            ["a4", 3, "c6", 0],
-            ["c6", 3, "c7", 3],
-        ], 3
+        # classic case: three traj. meet
+        # traj1, traj1_tr = [
+        #     ["a0", 1, "a1", 0],
+        #     ["a1", 1, "a2", 0],
+        #     ["a2", 1, "a3", 0],
+        #     ["a3", 1, "a4", 4],
+        #     ["a4", 1, "a5", 0],
+        #     ["a5", 1, "a6", 5],
+        # ], 9
+        # traj2, traj2_tr = [
+        #     ["b0", 2, "b1", 0],
+        #     ["b1", 2, "a2", 0],
+        #     ["a2", 2, "b3", 0],
+        #     ["b3", 2, "b4", 2],
+        #     ["b4", 2, "b5", 0],
+        #     ["b5", 2, "b6", 0],
+        # ], 2
+        # traj3, traj3_tr = [
+        #     ["c0", 3, "c1", 0],
+        #     ["c1", 3, "b5", 0],
+        #     ["b5", 3, "c3", 0],
+        #     ["c3", 3, "c4", 0],
+        #     ["c4", 3, "a4", 0],
+        #     ["a4", 3, "c6", 0],
+        #     ["c6", 3, "c7", 3],
+        # ], 3
 
-        # traj4, traj4_tr = [
-        #     ["d0", 4, "d1", 1],
-        #     ["d1", 4, "d2", 2],
-        #     ["d2", 4, "d3", 3],
-        #     ["d3", 4, "d4", 4],
-        #     ["d4", 4, "d5", 0],
-        #     ["d5", 6, "d6", 8],
-        #     ["d6", 3, "d7", 0],
-        #     ["d7", 4, "d8", 5],
-        #     ["d8", 4, "d9", 5],
-        #     ["d9", 4, "d10", 5],
-        #     ["d10", 4, "d5", 5],
-        #     ["d5", 2, "d11", 2],
-        #     # ["d2", 5, "d11", 0],
-        # ], 33
-        # traj5, traj5_tr = [
-        #     ["e0", 5, "e1", 0],
-        #     ["e1", 5, "e2", 0],
-        #     ["e2", 5, "e3", 0],
-        # ], 0
-        # traj6, traj6_tr = [
-        #     ["f0", 6, "d1", 0],
-        #     ["d1", 6, "e1", 0],
-        #     ["e1", 6, "f1", 0],
-        # ], 0
+        # a.store_inc(traj1, traj1_tr)
+        # a.store_inc(traj2, traj2_tr)
+        # a.store_inc(traj3, traj3_tr)
 
-        a.store_inc(traj1, traj1_tr)
-        a.store_inc(traj2, traj2_tr)
-        a.store_inc(traj3, traj3_tr)
+        # important_obs = ["a2", "b5", "a4"]
 
-        # a.store_inc(traj4, traj4_tr)  # loop
-        # a.store_inc(traj5, traj5_tr)  # loop
-        # a.store_inc(traj6, traj6_tr)  # loop
+        # special cases
+        traj4, traj4_tr = [
+            ["d0", 4, "d1", 1],
+            ["d1", 4, "d2", 1],
+            ["d2", 4, "d3", 1],
+            ["d3", 4, "d4", 1],
+            ["d4", 4, "d5", 1],
+            ["d5", 4, "d6", 1],
+            ["d6", 4, "d7", 1],
+            ["d7", 4, "d8", 1],
+            ["d8", 4, "d9", 1],
+            ["d9", 4, "d10", 5],
+        ], 14
+        traj5, traj5_tr = [
+            ["d0", 4, "d1", 1],
+            ["d1", 4, "d2", 1],
+            ["d2", 4, "d3", 1],
+            ["d3", 4, "d4", 1],
+            ["d4", 4, "d5", 1],
+            ["d5", 4, "d6", 1],
+            ["d6", 4, "d7", 1],
+            ["d7", 6, "d11", 1],
+            ["d11", 6, "d12", 1],
+            ["d12", 6, "d13", 20],
+        ], 14
+        traj6, traj6_tr = [
+            ["d0", 4, "d1", 1],
+            ["d1", 4, "d3", 1],
+            ["d3", 4, "d4", 1],
+            ["d4", 4, "d5", 1],
+            ["d5", 4, "d6", 1],
+            ["d6", 4, "d7", 1],
+            ["d7", 4, "d8", 1],
+            ["d8", 4, "d9", 1],
+            ["d9", 4, "d10", 5],
+        ], 14
 
+        a.store_inc(traj4, traj4_tr)  # loop
+        a.store_inc(traj5, traj5_tr)  # loop
+        a.store_inc(traj6, traj6_tr)  # loop
+
+        important_obs = ["d7"]
+
+        # merge
         a.merge_inc(a.inc)
-        print(a.main._node)
 
-        nodes = a.main._node
-
-        for i in nodes:
-            obs, action, reward, next, value = nodes[i]
-            print(f"node:{i} obs:{obs} action:{action} reward:{reward} next:{next} value:{value}")
+        a.main.node_print()
 
         a.post_process()
         print("------------------------")
 
-        for i in nodes:
-            obs, action, reward, next, value = nodes[i]
-            print(f"node:{i} obs:{obs} action:{action} reward:{reward} next:{next} value:{value}")
+        a.main.node_print()
 
         print("------------------------")
-        for obs in ["a2", "b5", "a4"]:
+        for obs in important_obs:
             print(a.get_action(obs))  # should be 2, 3, 1
 
         a.draw_graph()
@@ -198,15 +208,35 @@ class Test:
 
         iterator.iterate(np_adj, np_rew, np_val_0)
         
+    @staticmethod 
+    def hashing_test():
+        import numpy as np
+
+        # max resolution of hashing is 1e-16
+        a = np.random.random([1, 500])
+        print(a[0, -1])
+        print(Funcs.matrix_hashing(a))
+        a[0, -1] += 1e-16
+        print(a[0, -1])
+        print(Funcs.matrix_hashing(a))
+
+        # not work
+        a = np.random.random([1, 500])
+        print(a[0, -1])
+        print(Funcs.matrix_hashing(a))
+        a[0, -1] += 1e-17
+        print(a[0, -1])
+        print(Funcs.matrix_hashing(a))
 
 
 if __name__ == "__main__":
     test = Test()
     # testable of content for testing
     # test.plot_maze()  # test graph gen. for maze env.
-    # test.build_graph_test_manual()
-    test.build_graph_test_auto()
+    test.build_graph_test_manual()
+    # test.build_graph_test_auto()
     # test.vp_test()
+    # test.hashing_test()
 
 # from ctypes import sizeof
 # from src.util.imports.numpy import np
